--- a/web/main.html
+++ b/web/main.html
@@ -25,7 +25,7 @@
             <input type="checkbox" id="useAdspower" name="useAdspower">
         </div>
         <div id="adspowerApiContainer" style="display: none;">
-            <h3>Server Name</h3>
+            <h3>Adspower API</h3>
             <input type="text" id="adspowerApi" name="AdspowerApi" placeholder="http://local.adspower.net:50325">
         </div>
         <div id="serverNameContainer" class="inputs">
