--- a/web/main.html
+++ b/web/main.html
@@ -146,7 +146,10 @@
                 const isVpn = VpnRadio ? VpnRadio.id === 'isVpn' : false;
                 const adspowerApi = document.querySelector('#adspowerApi').value
                 const adspowerIds = document.querySelector('textarea[name="adspowerInput"]').value
-                
+                const proxyList = proxyInput
+                    .split("\n")
+                    .map((s) => s.trim())
+                    .filter((s) => s !== "");
                 // Check if "Is Madridista?" checkbox is checked
                 const isMadridista = document.querySelector('#isMadridista').checked;
                 let numero = '';
@@ -163,7 +166,7 @@
                     initialUrl,
                     browsersAmount,
                     captchaSolver,
-                    proxyInput,
+                    proxyList,
                     isMadridista,
                     numero,
                     contrasena,
@@ -173,7 +176,7 @@
                 });
 
                 // Trigger Eel backend call with new parameters
-                await eel.main(initialUrl, captchaSolver, browsersAmount, proxyInput, isMadridista, numero, contrasena, isVpn, adspowerApi, adspowerIds)();
+                await eel.main(initialUrl, captchaSolver, browsersAmount, proxyList, isMadridista, numero, contrasena, isVpn, adspowerApi, adspowerIds)();
 
                 // Close window after starting
                 closeWindow();
